--- a/kubejs/config/client.properties
+++ b/kubejs/config/client.properties
@@ -5,7 +5,7 @@ barBorderColor=ECEFF4
 exportAtlases=false
 menuBackgroundBrightness=64
 disableRecipeBook=false
-title=
+title=【麦子】Minecraft 1.18.2
 barColor=ECEFF4
 overrideColors=false
 fmlLogColor=ECEFF4
